<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITimer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>    
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Start">Start</string>
    <string name="Reset">Reset</string>
    <string name="Stop">Stop</string>
    <string name="SR">S.Rt.\u00b0</string>
    <string name="Time">Time</string>
    <string name="Zerozero">0000</string>
    <string name="ZeroOne">0100</string>
    <string name="OneMinute">1 Min.</string>
    <string name="OneEighty">0180</string>
    <string name="OrientationP">&quot;Orientation&quot;</string>
    <string name="OrientationPLabel">&quot;Portrait Mode&quot;</string>
    <string name="OrientationPSummary">&quot;Enable for portrait mode operation&quot;</string>
    <string name="ScreenOn">&quot;Screen Timeout&quot;</string>
    <string name="ScreenOnLabel">&quot;Keep Screen On&quot;</string>
    <string name="ScreenOnSummary">&quot;Select to keep screen on while application is running&quot;</string>
    <string name="UseVibrator">&quot;Vibration Alert&quot;</string>
    <string name="UseVibratorLabel">&quot;Use Vibration Alert&quot;</string>
    <string name="UseVibratorSummary">&quot;Select to enable vibration alert&quot;</string>
    <string name="UseAny">&quot;Any Key&quot;</string>
    <string name="UseAnyLabel">&quot;Use Any Key&quot;</string>
    <string name="UseAnySummary">&quot;Select to use any key for timer start/stop (excludes Power, Home, Menu keys)&quot;</string>
</resources>